DOCS-338 add linting (eslint, eslint-mdx, remark, vale) (#563)
Co-authored-by: Lennart <lekoarts@gmail.com>

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -111,7 +111,7 @@ Below is an example of a webhook payload for a `user.created` event:
 }
 ```
 
-## TypeScript Support
+## TypeScript support
 
 Clerk provides the types as part of our SDK offering. Below is an example of type usage in a webhook handler:
 
@@ -151,7 +151,7 @@ If a webhook message or multiple webhook messages fail to send, you have an opti
   alt="The Webhooks page of the Clerk Dashboard. There is a red arrow pointing to the Replay option for a failed webhook message. There is a red box around the 'Replay' button."
 />
 
-#### Replay Options
+#### Replay options
 
 From the Replay Messages menu, you will have 3 options. 
 1. Resend the specific message you selected.
