--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -3,24 +3,26 @@ title: Add authentication and user management to your Next.js app with Clerk in 
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 ---
 
-<TutorialHero 
+<TutorialHero
   framework="nextjs"
   beforeYouStart={[
     {
       title: "Set up a Clerk application",
-      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+      link: "https://clerk.com/docs/quickstarts/setup-clerk",
     },
     {
       title: "Create a Next.js application",
-      link: "https://nextjs.org/docs/getting-started/installation"
-    }
+      link: "https://nextjs.org/docs/getting-started/installation",
+    },
   ]}
 >
+
 - Install `@clerk/nextjs`
 - Set up your environment keys
-- Wrap your Next.js app in `<ClerkProvider/>`  
+- Wrap your Next.js app in `<ClerkProvider />`
 - Limit access to authenticated users
-- Embed the `<UserButton/>`
+- Embed the `<UserButton />`
+
 </TutorialHero>
 
 <Steps>
@@ -29,19 +31,19 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
-
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
 
-  ```bash filename="terminal"
-  yarn add @clerk/nextjs
-  ```
+```bash filename="terminal"
+yarn add @clerk/nextjs
+```
 
-  ```bash filename="terminal"
-  pnpm add @clerk/nextjs
-  ```
+```bash filename="terminal"
+pnpm add @clerk/nextjs
+```
+
 </CodeBlockTabs>
 
 ### Set environment keys
@@ -65,7 +67,7 @@ This sets your public and secret keys.
 
 ### Wrap your app in `<ClerkProvider>`
 
-The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file. 
+The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file.
 
 <Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
@@ -93,6 +95,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
       )
     }
     ```
+
   </Tab>
 
   <Tab>
@@ -111,16 +114,17 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
       }
       export default MyApp;
       ```
+
   </Tab>
 </Tabs>
 
 ### Require authentication to access your app
 
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access. 
+Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access.
 
-Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`. 
+Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
 
-Copy and paste the following code into your `middleware.ts`. With this, your entire application is protected. 
+Copy and paste the following code into your `middleware.ts`. With this, your entire application is protected.
 
 ```tsx filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
@@ -131,9 +135,8 @@ import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware({});
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
-
 ```
 
 **Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000).** The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature. If you want to make other routes public, check out the [`authMiddleware` reference page](/docs/references/nextjs/auth-middleware). Go ahead and sign up to get access to your application. Your app is now fully protected by Clerk!
@@ -163,14 +166,15 @@ import { UserButton } from "@clerk/nextjs";
 export default function Home() {
   return (
     <>
-			<header>
-				<UserButton afterSignOutUrl="/"/>
-			</header>
-			<div>Your home page's content can go here.</div>
+      <header>
+        <UserButton afterSignOutUrl="/" />
+      </header>
+      <div>Your home page's content can go here.</div>
     </>
   );
 }
 ```
+
 </CodeBlockTabs>
 
 ### Sign out of your application
@@ -185,7 +189,7 @@ You're ready to [deploy your app to production](/docs/deployments/overview) and 
 
 ## You're authenticated!
 
-Congratulations! Your app is now only available to authenticated users. But this is just the first step. 
+Congratulations! Your app is now only available to authenticated users. But this is just the first step.
 
 If you would like a repository that demonstrates many of the features Clerk has to offer, such as user, session, and organization management, check out one of Clerk's demo repositories:
 
@@ -205,5 +209,6 @@ If you would like a repository that demonstrates many of the features Clerk has 
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
 
     <Cards title="Use Clerk with Next.js 12 and older" description="Learn how to use Clerk with older versions of Next.js." link="/docs/references/nextjs/usage-with-older-versions" cta="Learn More" />
+
   </div>
 </div>
