--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -9,7 +9,7 @@ The appearance prop can be applied to [React's `<ClerkProvider>`](/docs/componen
 
 This applies to all of the React-based packages, like [Next.js](/docs/quickstarts/nextjs) and [Gatsby](/docs/quickstarts/gatsby), as well as [the pure JavaScript ClerkJS package](/docs/references/javascript/overview).
 
-## Using a pre-built Theme
+## Using a pre-built theme
 
 Clerk offers [a set of themes that can be used with the `appearance` prop](/docs/components/customization/themes). The themes are available as a package called `@clerk/themes`.
 
@@ -696,7 +696,7 @@ You can identify the underlying element by inspecting the HTML of the Clerk comp
 
 When you select an element that is part of a Clerk component, you'll notice a list of classes like so:
 
-```
+```html
 cl-formButtonPrimary cl-button 🔒️ cl-internal-1ta0xpz
 ```
 
@@ -732,7 +732,7 @@ You're able to pass additional classes to Clerk component elements by using the 
 
 If you look back to the list of classes applied to a Clerk component's element, you'll see a list of classes like so:
 
-```
+```html
 cl-formButtonPrimary cl-button 🔒️ cl-internal-1ta0xpz
 ```
 
