--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -43,7 +43,7 @@ Supabase requires that JWTs be signed with the H256 signing algorithm and use th
   alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
 />
 
-Reveal the JWT secret to copy it and then paste it in the **Signing key field** in the Clerk JWT template. ​​After the key is added, you can click the Apply Changes button to save your template.
+Reveal the JWT secret to copy it and then paste it in the **Signing key field** in the Clerk JWT template. After the key is added, you can click the Apply Changes button to save your template.
 
 <Images 
   width={2392}
@@ -75,7 +75,7 @@ You can find your Frontend API value in the Clerk Dashboard on the **[API keys](
   alt="The API keys page in the Clerk Dashboard. There is a red arrow pointing to the copy button next to the 'Publishable key'."
 />
 
-To get the ones needed for Supabase, navigate to the same **Settings > API page** as before and locate the **anon public key** and **URL**.​
+To get the ones needed for Supabase, navigate to the same **Settings > API page** as before and locate the **anon public key** and **URL**.
 
 <Images
   width={2392}
@@ -166,5 +166,5 @@ CREATE POLICY "Authenticated users can update their own todos"
 ## Next steps
 
 - Get started with our official [clerk-supabase-starter](https://github.com/clerk/clerk-supabase-starter) repo
-- Check out our [Next.js + Supabase + Clerk tutorial​](https://clerk.com/blog/nextjs-supabase-todos-with-multifactor-authentication)
+- Check out our [Next.js + Supabase + Clerk tutorial](https://clerk.com/blog/nextjs-supabase-todos-with-multifactor-authentication)
 - Try adding some [custom claims](/docs/backend-requests/making/jwt-templates) to the JWT template in `app_metadata` or `user_metadata`
