--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -5,6 +5,10 @@ description: A collection of utility functions and components in order to allow 
 
 # Verify the active user’s permissions
 
+<Callout type="info">
+  The following authorization checks are predicated on an organization being selected. Without this, they will likely always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component is available as a styled option to handle this. For a headless option, our `useClerk()` and `useOrganizationList()` hooks return a `setActive({ organization: <orgId> })` method which can be used in custom components.
+</Callout>
+
 Clerk provides two kinds of helpers for authorization:
 
 - **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
