update callout to follow styleguide and improve flow

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -6,19 +6,19 @@ description: A collection of utility functions and components in order to allow 
 # Verify the active user’s permissions
 
 <Callout type="info">
-  The following authorization checks are predicated on an organization being selected. Without this, they will likely always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component is available as a styled option to handle this. For a headless option, our `useClerk()` and `useOrganizationList()` hooks return a `setActive({ organization: <orgId> })` method which can be used in custom components.
+  The following authorization checks are predicated on a user having an active organization. Without this, they will likely always evaluate to false by default. Clerk's built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component and `[useOrganizationList()](/docs/references/react/use-organization-list).setActive({ organization: <orgId> })` method are two available options to set an organization as active for a user.
 </Callout>
 
 Clerk provides two kinds of helpers for authorization:
 
 - **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
-- **`has` helpers** are more composable and flexible. They allow you to check and see what permissions a user *has*. You can decide what to do if the user lacks the permission.
+- **`has` helpers** are more composable and flexible. They allow you to check and see what permissions a user _has_. You can decide what to do if the user lacks the permission.
 
 Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
 
 ### `has()`
 
-Clerk's `has()` function can be used on both the frontend and the backend to determine if the user *has* a role or permission.
+Clerk's `has()` function can be used on both the frontend and the backend to determine if the user _has_ a role or permission.
 
 `has()` can be used anywhere that Clerk returns an [`Authentication` object](/docs/references/nextjs/authentication-object):
 
@@ -51,6 +51,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         )
       }
     ```
+
   </Tab>
 
   <Tab>
@@ -74,6 +75,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         )
       }
     ```
+
   </Tab>
 </Tabs>
 
@@ -97,6 +99,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         return props.children
       }
       ```
+
   </Tab>
 
   <Tab>
@@ -114,6 +117,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         return props.children
       }
       ```
+
   </Tab>
 
   <Tab>
@@ -133,6 +137,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
           )
         }
       ```
+
   </Tab>
 </Tabs>
 
@@ -154,6 +159,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         }
       }
     ```
+
   </Tab>
 
   <Tab>
@@ -193,6 +199,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         return users.getTeams(userId)
       }
     ```
+
   </Tab>
 
   <Tab>
@@ -209,6 +216,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
         return users.getTeams(userId)
       }
     ```
+
   </Tab>
 </Tabs>
 
@@ -219,10 +227,10 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
 export const loader: LoaderFunction = async args => {
   const { has } = await getAuth(args);
 
-  if(has({permission: "org:team_settings:manage"})){
-    return redirect('/request-access');
-  }
-  return {};
+if(has({permission: "org:team_settings:manage"})){
+return redirect('/request-access');
+}
+return {};
 };
 
 export default function Settings() {
@@ -249,74 +257,76 @@ If you are not using React or any of the meta-frameworks we support, there's a g
     const canManageSettings = clerk.session.checkAuthorization({
       permission: "org:team_settings:manage"
     })
-  ```
+
+````
 </CodeBlockTabs>
 
 
 ## Authorize with roles
 
 <Callout type="warning">
-  Performing role checks is not considered a best-practice and developers should avoid it as much as possible. Usually, complex role checks can be refactored with a single permission check.
+Performing role checks is not considered a best-practice and developers should avoid it as much as possible. Usually, complex role checks can be refactored with a single permission check.
 </Callout>
 
 You can pass a `role` the same way you can pass a `permission` in all the examples above.
 
 <Tabs type="framework" items={[ "RSC with <Protect>","RSC with auth().protect()", "Client Component with has()", ]}>
-  <Tab>
-    The following example uses `<Protect>`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
+<Tab>
+  The following example uses `<Protect>`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
 
-    ```tsx filename="/app/dashboard/settings/layout.tsx"
-      import type { PropsWithChildren } from "react";
-      import { Protect } from "@clerk/nextjs";
+  ```tsx filename="/app/dashboard/settings/layout.tsx"
+    import type { PropsWithChildren } from "react";
+    import { Protect } from "@clerk/nextjs";
 
-      export default function SettingsLayout(props: PropsWithChildren){
-        return (
-          <Protect
-            condition={has => has({role: "org:admin"}) || has({role: "org:billing_manager"})}
-          >
-            {props.children}
-          </Protect>
-        )
-      }
-    ```
-  </Tab>
+    export default function SettingsLayout(props: PropsWithChildren){
+      return (
+        <Protect
+          condition={has => has({role: "org:admin"}) || has({role: "org:billing_manager"})}
+        >
+          {props.children}
+        </Protect>
+      )
+    }
+  ```
+</Tab>
 
-  <Tab>
-    <Callout>
-      `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
-    </Callout>
+<Tab>
+  <Callout>
+    `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
+  </Callout>
 
-    ```tsx filename="/app/dashboard/settings/layout.tsx"
-      import type { PropsWithChildren } from "react";
-      import { auth } from "@clerk/nextjs/server";
+  ```tsx filename="/app/dashboard/settings/layout.tsx"
+    import type { PropsWithChildren } from "react";
+    import { auth } from "@clerk/nextjs/server";
 
-      export default function SettingsLayout(props: PropsWithChildren){
-        const { userId } = auth().protect(has => has({role: "org:admin"}) || has({role: "org:billing_manager"}))
+    export default function SettingsLayout(props: PropsWithChildren){
+      const { userId } = auth().protect(has => has({role: "org:admin"}) || has({role: "org:billing_manager"}))
 
-        return props.children
-      }
-    ```
-  </Tab>
+      return props.children
+    }
+  ```
+</Tab>
 
-  <Tab>
-    The following snippet uses `useAuth()` to inspect a user's roles granularly. If the user doesn't have either an `org:admin` or an `org:billing_manager` role, the component returns `null` instead of rendering its children.
+<Tab>
+  The following snippet uses `useAuth()` to inspect a user's roles granularly. If the user doesn't have either an `org:admin` or an `org:billing_manager` role, the component returns `null` instead of rendering its children.
 
-    ```tsx filename="/app/dashboard/settings/form.tsx"
-      'use client';
-      import { useAuth } from "@clerk/nextjs";
+  ```tsx filename="/app/dashboard/settings/form.tsx"
+    'use client';
+    import { useAuth } from "@clerk/nextjs";
 
-      export function SettingsForm(){
-        const { has } = useAuth();
-        const canAccessSettings = has({role: "org:admin"}) || has({role: "org:billing_manager"})
+    export function SettingsForm(){
+      const { has } = useAuth();
+      const canAccessSettings = has({role: "org:admin"}) || has({role: "org:billing_manager"})
 
-        if(!canManageSettings) return null;
+      if(!canManageSettings) return null;
 
-        return (
-          <form>
-            //...
-          </form>
-        )
-      }
-     ```
-  </Tab>
+      return (
+        <form>
+          //...
+        </form>
+      )
+    }
+   ```
+</Tab>
 </Tabs>
+````
