add fapi ref link for /client/handshake endpoint

--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -44,7 +44,7 @@ A handshake is only triggered if a request is determined to be a document reques
 
 The handshake flow is composed of two main pieces:
 
-1. The FAPI `/client/handshake` endpoint
+1. The FAPI [`/client/handshake` endpoint](https://clerk.com/docs/reference/frontend-api/tag/Client#operation/handshakeClient)
 2. The `@clerk/backend` `authenticateRequest()` method
 
 ### Handshake payload
