--- a/docs/upgrade-guides/long-term-support.mdx
+++ b/docs/upgrade-guides/long-term-support.mdx
@@ -1,5 +1,5 @@
 ---
-title: Long Term Support Policy
+title: Long term support policy
 description: Clerk's policy for supporting past major versions of our SDKs
 ---
 
