--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -9,7 +9,7 @@ User accounts are a vector for malicious attacks for many reasons, from imperson
 
 ## How Clerk protects against brute force attacks
 
-**Account Lockout** is a Clerk feature that enables you to protect your users from brute-force attacks on static credentials such as passwords or backup codes. If enabled on your instance, Clerk will automatically track users' failed verification attempts when they try to authenticate via password on backup code.
+**Account Lockout** is a Clerk feature that enables you to protect your users from brute-force attacks on static credentials such as passwords, backup codes, email/phone codes, password resets and TOTP attempts. If enabled on your instance, Clerk will automatically track users' failed verification attempts when they try to authenticate via password on backup code.
 
 ### How Account Lockout works
 
