--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -21,7 +21,7 @@ description: Learn how to hide personal accounts and force organizations in your
   - Limit access to users with active organizations only
 </TutorialHero>
 
-# Force organization-only accounts in your app
+# Hide personal accounts and force organizations
 
 In this guide, you will learn how to hide a user's "personal account" in order to appear as if they only have an organization account. This is useful for applications that are built for organizations only, such as B2B applications.
 
