--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -22,16 +22,17 @@ There are two ways you can include ClerkJS in your project. You can either [impo
   npm install @clerk/clerk-js
   ```
 
-  ```bash filename="terminal"
-  yarn add @clerk/clerk-js
-  ```
+```bash filename="terminal"
+yarn add @clerk/clerk-js
+```
 
-  ```bash filename="terminal"
-  pnpm add @clerk/clerk-js
-  ```
+```bash filename="terminal"
+pnpm add @clerk/clerk-js
+```
+
 </CodeBlockTabs>
 
-Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your Clerk Publishable Key as a parameter. Then, you can call the `load()` method to initialize ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your Clerk Publishable Key as a parameter. You can find your Clerk Publishable Key in the Clerk Dashboard on the [**API Keys**](https://dashboard.clerk.com/last-active?path=api-keys) page. Then, you can call the `load()` method to initialize ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
 
 <InjectKeys>
 
@@ -54,7 +55,9 @@ ClerkJS can be loaded from a `<script />` tag with the source from your **Fronte
 Add the following script to your site's `<body>` element:
 
 <Callout type="info">
-  Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+  Calling the `load()` method initializes ClerkJS. For more information on the
+  `load()` method and what options you can pass to it, check out the [reference
+  documentation](/docs/references/javascript/clerk/clerk#load).
 </Callout>
 
 <InjectKeys>
