Changed /webhook to /webhooks for all cases

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -94,7 +94,7 @@ pnpm add svix
     Create a webhook endpoint in the `/api` directory.
 
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```ts filename="app/api/webhook/route.ts"
+    ```ts filename="app/api/webhooks/route.ts"
     import { Webhook } from 'svix'
     import { headers } from 'next/headers'
     import { WebhookEvent } from '@clerk/nextjs/server'
@@ -156,7 +156,7 @@ pnpm add svix
 
     ```
 
-    ```ts filename="pages/api/webhook.ts"
+    ```ts filename="pages/api/webhooks.ts"
     import { Webhook } from 'svix'
     import { WebhookEvent } from '@clerk/nextjs/server'
     import { NextApiRequest, NextApiResponse } from 'next'
@@ -232,7 +232,7 @@ pnpm add svix
 import bodyParser from "body-parser";
 
 app.post(
-  "/api/webhook",
+  "/api/webhooks",
   bodyParser.raw({ type: "application/json" }),
   async function (req, res) {
     // Check if the 'Signing Secret' from the Clerk Dashboard was correctly provided
@@ -307,7 +307,7 @@ Your Route Handler must be made public or ignored by Middleware to allow the req
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware({
-  publicRoutes: ["/api/webhook(.*)"],
+  publicRoutes: ["/api/webhooks(.*)"],
 });
 
 export const config = {
