remove braceketed phrases

--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -32,13 +32,14 @@ The handshake mechanism operates by way of a redirect from the host application 
 A handshake is only triggered if a request is determined to be a document request (detected by the presence of the `Sec-Fetch-Dest: document` header, or `Accept: text/html`). Otherwise, the request is treated as `signed-out`.
 </Callout>
 
-1. Development instance and a dev browser is detected in URL **[URL-based session sync]**
-2. Production instance and request is being made to a satellite application **[satellite needs sync]**
-3. Has a session token (`__session`), but no active client is detected (`__client_uat` = 0 or missing) **[session token without client UAT]**
-4. Has active client (`__client_uat` > 0) but no session token **[client UAT without session token]**
-5. Client UAT is more recent than current session token issued at (`__client_uat` > `sessionToken.iat`) **[session token outdated]**
-6. Session token exists but is expired **[session token expired]**
-7. Session token exists but is not active yet **[session token not active yet]**
+1. Development instance and a dev browser is detected in URL 
+[(URL-based session sync)](https://clerk.com/docs/upgrade-guides/url-based-session-syncing#url-based-session-syncing)
+2. Production instance and request is being made to a satellite application
+3. Has a session token (`__session`), but no active client is detected (`__client_uat` = 0 or missing)
+4. Has active client (`__client_uat` > 0) but no session token
+5. Client UAT is more recent than current session token issued at (`__client_uat` > `sessionToken.iat`)
+6. Session token exists but is expired
+7. Session token exists but is not active yet
 
 ## Handshake architecture
 
