--- a/docs/references/react/use-clerk.mdx
+++ b/docs/references/react/use-clerk.mdx
@@ -5,10 +5,10 @@ description: The useClerk() hook provides access to the Clerk object, giving you
 
 # `useClerk()`
 
-The `useClerk()` hook provides access to the the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
+The `useClerk()` hook provides access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
 
 <Callout type="warning">
-  This is intended to be used for advanced use cases, like building a completely custom OAuth flow or as an escape hatch giving access to lower-level APIs.
+  This is intended to be used for advanced use cases, like building a completely custom OAuth flow or as an escape hatch for getting access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object.
 </Callout>
 
 ## Usage
