--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -28,7 +28,7 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
 | `status` | [`SessionStatus`](#session-status) | The current state of the session. |
 | `lastActiveAt` | `Date` | The time the session was last active on the [`Client`][client-ref]. |
 | `abandonAt` | `Date` | The time when the session was abandoned by the user. |
-| `expireAt` | `Date` | The time the session expires and will seize to be active. |
+| `expireAt` | `Date` | The time the session expires and will cease to be active. |
 | `updatedAt` | `Date` | The last time the session recorded activity of any kind. |
 | `createdAt` | `Date` | The time the session was created. |
 | `lastActiveToken` | `TokenResource \| null` | The last active token for the session |
