--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -6,7 +6,7 @@ description: Use the Clerk Dashboard to unlock user accounts.
 # Unlock user accounts from the Clerk Dashboard
 
 <Callout type="info">
-This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
+This feature is applicable to a subset of actions. Find a [full list here](/docs/security/user-lock-guide#related-actions)
 </Callout>
 
 Users with admin roles can override lockouts through the Clerk Dashboard.
