feat: Add usage example of SyncActiveOrganization and minor fixes in snippets 2

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -275,7 +275,12 @@ To limit access to a specific part of the application, you can check if the path
     afterAuth(auth, req, evt) {
       ...
       // Redirect logged in users to organization selection page if they are not active in an organization
-      if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/dashboard/org-selection"){
+      if(
+        auth.userId &&
+        !auth.orgId &&
+        req.nextUrl.pathname.startsWith('/dashboard') && 
+        req.nextUrl.pathname !== "/dashboard/org-selection"
+        ){
       const searchParams = new URLSearchParams({
         redirectUrl: req.url
       })
