Typo fixed found by Discord member
https://discord.com/channels/856971667393609759/858011152133783584/1194440265142911148

--- a/docs/organizations/creator-role.mdx
+++ b/docs/organizations/creator-role.mdx
@@ -34,7 +34,7 @@ In the example below, the `owner` role has been created and is being assigned as
   alt=" "
 />
 
-## Assign the **Creator** role to an exisitng role in the roles list
+## Assign the **Creator** role to an existing role in the roles list
 
 If a role has the necessary permissions above, you can set it to the **Creator** role. To get to the organization's list of roles, in your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). Open the  role's "..." menu and select **Set as Creator role**.
 
