Update user-lock-guide.mdx (#597)
Co-authored-by: Jacob M-G Evans <27247160+JacobMGEvans@users.noreply.github.com>

--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -9,7 +9,7 @@ User accounts are a vector for malicious attacks for many reasons, from imperson
 
 ## How Clerk protects against brute force attacks
 
-**Account Lockout** is a Clerk feature that enables you to protect your users from brute-force attacks on static credentials such as passwords or backup codes. If enabled on your instance, Clerk will automatically track users' failed verification attempts when they try to authenticate via password on backup code.
+**Account Lockout** is a Clerk feature that enables you to protect your users from brute-force attacks on static credentials. If enabled on your instance, Clerk will automatically track users' failed verification attempts when they try to authenticate via password on backup code.
 
 ### How Account Lockout works
 
@@ -22,6 +22,14 @@ An admin can [unlock a user before the expiry of the lockout period via the Cler
 By default, Clerk applications will lock user accounts after 100 failed login attempts and require a one hour cool down period before anyone can attempt to log into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!)
 
 You can [customize the number of times a login can be attempted before the account is locked, and how long lockouts last.](/docs/security/customize-user-lockout)
+
+#### Actions
+Clerk measures the following actions as part of Account Lockout:
+- Password attempts
+- Password resets
+- Backup code requests
+- Email & Phone codes
+- TOTP attempts
 
 ## What a locked out user sees
 
