feat: Remove references to createEmail function

--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -61,7 +61,11 @@ Verify the JWT and return the client.
 sdk.clients.verify_token("jwt")
 ```
 
-## [Emails](https://clerk.com/docs/reference/backend-api/tag/Emails)
+## Emails
+
+<Callout type="danger">
+  This method is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
+</Callout>
 
 Send an email message to an email address ID belonging to another user.
 
