--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -156,11 +156,9 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 
 ## Email operations
 
-Email operations are exposed under `clerkClient.emails`. The following methods are available:
-
-### Create
-
-- [`createEmail()`](/docs/references/backend/emails/create-email)
+<Callout type="danger">
+  This operation is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
+</Callout>
 
 ## SMS message operations (deprecated)
 
