--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -98,9 +98,9 @@ If you are comfortable with setting the `CLERK_SECRET_KEY` environment variable 
   const pkg = require('@clerk/clerk-sdk-node');
   const clerkClient = pkg.default;
 
-  clerkClient.emails
-    .createEmail({ fromEmailName, subject, body, emailAddressId })
-    .then((email) => console.log(email))
+  clerkClient.sessions
+    .getSessionList()
+    .then((sessions) => console.log(sessions))
     .catch((error) => console.error(error));
   ```
 
@@ -158,9 +158,9 @@ const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
 
 const clerkClient = Clerk({ secretKey: '{{secret}}' });
 
-clerkClient.emails
-    .createEmail({ fromEmailName, subject, body, emailAddressId })
-    .then((email) => console.log(email))
+clerkClient.sessions
+    .getSessionList()
+    .then((sessions) => console.log(sessions))
     .catch((error) => console.error(error));
 ```
 </CodeBlockTabs>
