add getOrganizationMemberships to User class

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -58,11 +58,11 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 
 ### `update()`
 
+Updates the user's attributes. Use this method to save information you collected about the user.
+
 ```typescript
 function update: (params: UpdateUserParams) => Promise<User>;
 ```
-
-Updates the user's attributes. Use this method to save information you collected about the user.
 
 #### `UpdateUserParams`
 
@@ -81,19 +81,19 @@ All props below are optional.
 
 ### `delete()`
 
+Deletes the current user.
+
 ```typescript
 function delete: () => Promise<void>;
 ```
 
-Deletes the current user.
-
 ### `setProfileImage()`
+
+Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
 ```typescript
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
-
-Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
 #### `SetProfileImageParams`
 
@@ -101,7 +101,7 @@ Adds the user's profile image or replaces it if one already exists. This method 
 | --- | --- | --- |
 | `file` | `Blob \| File \| string \| null` | The file to set as the user's profile image. |
 
-#### Returns
+#### `setProfileImage()` returns
 
 | Type | Description |
 | --- | --- |
@@ -115,7 +115,6 @@ Adds the user's profile image or replaces it if one already exists. This method 
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
-
 ### `getSessions()`
 
 ```typescript
@@ -124,7 +123,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
 
-#### Returns
+#### `getSessions()` returns
 
 | Type | Description |
 | --- | --- |
@@ -138,11 +137,31 @@ function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberReso
 
 A check whether or not the given resource is the primary identifier for the user.
 
-#### Params
+#### `isPrimaryIdentification()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `ident` | [`EmailAddress`][email-ref] \| [`PhoneNumber`][phone-ref] \| [`Web3Wallet`][web3-ref] | The resource checked against the user to see if it is the primary identifier. |
+
+### `getOrganizationMemberships()`
+
+Retrieves all of the organizations the user is a member of.
+
+{/* TODO: Add function declaration */}
+```typescript
+function getOrganizationMemberships: () => <insert return>;
+```
+
+#### `getOrganizationMemberships()` returns
+
+{/* TODO: add type and description for return values */}
+| Type | Description |
+| --- | --- |
+| TODO: insert return type | TODO: insert return description |
+
+#### `getOrganizationMemberships()` example
+
+{/* TODO: add a code example of this method being accessed and used, because that's how we're moving now. That's what we wanna do for methods now, we need to start providing examples on how they are accessed and used in real applications :~) */}
 
 ## Additional methods
 
