add function declaration and return type

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -147,17 +147,17 @@ A check whether or not the given resource is the primary identifier for the user
 
 Retrieves all of the organizations the user is a member of.
 
-{/* TODO: Add function declaration */}
+{/* TODO: check this pls */}
 ```typescript
-function getOrganizationMemberships: () => <insert return>;
+function getOrganizationMemberships: (params: ClerkPaginationParams) => => Promise<ClerkPaginatedResponse<OrganizationMembershipResource>>;
 ```
 
 #### `getOrganizationMemberships()` returns
 
-{/* TODO: add type and description for return values */}
+{/* TODO: check this pls */}
 | Type | Description |
 | --- | --- |
-| TODO: insert return type | TODO: insert return description |
+| <code>Promise\<[PaginatedResponse](/docs/references/javascript/types/paginated-response)\<OrganizationMembershipResource\>\></code> | The list of active user sessions. |
 
 #### `getOrganizationMemberships()` example
 
