add todo for adding page on OrganizationMembershipResource

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -157,7 +157,9 @@ function getOrganizationMemberships: (params: ClerkPaginationParams) => => Promi
 {/* TODO: check this pls */}
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse](/docs/references/javascript/types/paginated-response)\<OrganizationMembershipResource\>\></code> | The list of active user sessions. |
+| <code>Promise\<[PaginatedResponse](/docs/references/javascript/types/paginated-response)\<OrganizationMembershipResource\>\></code> | The list of organizations the user is a member of. |
+
+{/* TODO: We might need to create a doc page that covers OrganizationMembershipResource */}
 
 #### `getOrganizationMemberships()` example
 
