Apply suggestions from code review
Co-authored-by: Jacob M-G Evans <27247160+JacobMGEvans@users.noreply.github.com>

--- a/docs/upgrade-guides/long-term-support.mdx
+++ b/docs/upgrade-guides/long-term-support.mdx
@@ -11,7 +11,9 @@ After the LTS period ends, there will be no further changes to the code for that
 
 ## Schedule
 
-**Note:** Future time ranges are listed when a specific target date is not yet determined. The version number refers to the current version of the [`@clerk/clerk-js`](https://www.npmjs.com/package/@clerk/clerk-js) package.
+<Callout type="info">
+  Future time ranges are listed when a specific target date is not yet determined. The version number refers to the current version of the [`@clerk/clerk-js`](https://www.npmjs.com/package/@clerk/clerk-js) package.
+</Callout>
 
 | Version | Status                        | As Of            | Until            |
 | ------- | ----------------------------- | ---------------- | ---------------- |
